tests/compile_fail/derive_for_enum.rs
use check_initial_state_derive::CheckInitialState;

fn main() {}

#[derive(CheckInitialState)]
enum Enum {}
